k8s/observability/observability-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: qa
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123456789012:certificate/abcd1234-5678-90ef-ghij-1234567890ab
spec:
  ingressclassName: alb
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /prometheus
            pathtype: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
          - path: /grafana
            pathtype: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          - path: /alertmanager
            pathtype: Prefix
            backend:
              service:
                name: alertmanager-service
                port:
                  number: 9093
